# codex-github-harness

./: .gitignore  .markdownlint-cli2.jsonc  CONTRIBUTING.md  DESIGN.md  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts  format.ts  types.ts
examples/: AGENTS.full.md
skills/github-pr-workflow/: SKILL.md
templates/: AGENTS.md
templates/examples/: AGENTS.minimal.md
