[package]
name = "gtm-agent-desktop"
version = "0.1.0"
description = "Local Codex-powered GTM control plane"
authors = ["Maxi Lvn"]
edition = "2021"

[lib]
name = "gtm_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
arboard = "3.4"
opener = "0.7"
dirs = "5.0"
shell-words = "1.1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
